# fpgactrlsys-electest

./: .gitignore  FPGAPROG.md  LICENSE  README.md  pyproject.toml  requirements.txt
control_system/constraints/: Arty-S7-50-Master.xdc  constraints_arty_s7.xdc
control_system/rtl/: adc_fifo_cache.sv  address_decoder.sv  i2cmaster.sv  prbs_lfsr.sv  rx_tx_cycle_controller.sv  state_file_reg.sv  toplevel.sv  uart_rx.sv  us_programmable_counter.sv  watchdog_pga_controller.sv
elec_test_ctrl_gui/: __init__.py  backend.py  cli.py
hello_world_arty_s7/constraints/: Arty-S7-50-Master.xdc
hello_world_arty_s7/rtl/: arty_s7_hello_world_toplevel.sv  pwm.sv
hello_world_arty_s7/tests/: Makefile  test_hello_world.py
src/fifo_cache/model/: fifo_cache_model.py
src/fifo_cache/sv/: fifo_cache.sv
src/fifo_cache/tests/: Makefile  test_fifo_cache.py
src/file_register/model/: file_reg_model.py
src/file_register/sv/: file_reg.sv
src/file_register/tests/: Makefile  test_file_reg.py
src/finitestatemachine/sv/: fsm.sv
src/finitestatemachine/tests/: Makefile
src/fpgactrlsys_electest/: __init__.py
src/fpgactrlsys_electest/sv/: fsm.sv
src/i2cmaster/model/: i2cmaster_model.py
src/i2cmaster/sv/: i2cmaster.sv
src/i2cmaster/tests/: Makefile
src/pipo/model/: pipo_reg_model.py
src/pipo/sv/: pipo_reg.sv
src/pipo/tests/: Makefile  test_pipo_reg.py
src/piso/model/: piso_reg_model.py
src/piso/sv/: piso_reg.sv
src/piso/tests/: Makefile  test_piso_reg.py
src/prbs/model/: prbs_lfsr_model.py
src/prbs/sv/: prbs_lfsr.sv
src/prbs/tests/: Makefile  test_prbs_lfsr.py
(+6 files in other folders)
