[project]
name = "fpgactrlsys-electest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dasdias", email = "das.dias6@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "cocotb>=2.0.1",
    "numpy>=2.2.6",
    "prompt-toolkit>=3.0.52",
    "pyserial>=3.5",
    "rich>=15.0.0",
    "serial>=0.0.97",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
